--- a/example/src/app/features/home/home.html
+++ b/example/src/app/features/home/home.html
@@ -1,33 +1,70 @@
-<div id="home-header" class="jumbotron">
-  <greeting name="home.name"></greeting>
-</div>
-
-<button class="btn btn-primary" ng-click="home.changeName()">Change</button>
-<button class="btn btn-danger" ng-click="home.randomName()">Random</button>
-
-<p>province: {{district}}</p>
-<p>province: {{amphoe}}</p>
+<p>district: {{district}}</p>
+<p>amphoe: {{amphoe}}</p>
 <p>province: {{province}}</p>
 <p>zipcode: {{zipcode}}</p>
 
-<br />
+<br/>
 
-<md-input-container class="md-block" flex-gt-xs>
-  <label>District</label>
-  <input id="district" ng-model="district">
-</md-input-container>
+<md-address class="row">
 
-<md-input-container class="md-block" flex-gt-xs>
-  <label>Amphoe</label>
-  <input id="amphoe" ng-model="amphoe">
-</md-input-container>
+  <div class="col-md-12">
+    <md-input-container class="md-block" flex-gt-xs>
+      <label>Address 1</label>
+      <input name="address1" ng-model="address.address1" required>
+    </md-input-container>
+  </div>
 
-<md-input-container class="md-block" flex-gt-xs>
-  <label>Province</label>
-  <input id="province" ng-model="province">
-</md-input-container>
+  <div class="col-md-12">
+    <md-input-container class="md-block" flex-gt-xs>
+      <label>Address 2 (optional)</label>
+      <input name="address2" ng-model="address.address2">
+    </md-input-container>
+  </div>
 
-<md-input-container class="md-block" flex-gt-xs>
-  <label>Zip code</label>
-  <input id="zipcode" ng-model="zipcode">
-</md-input-container>
+  <div class="col-md-6">
+    <md-district>
+
+      <md-input-container class="md-block" flex-gt-xs>
+        <label>District</label>
+        <input name="district" ng-model="address.district" required>
+      </md-input-container>
+
+    </md-district>
+  </div>
+
+  <div class="col-md-6">
+    <md-amphoe>
+
+      <md-input-container class="md-block" flex-gt-xs>
+        <label>Amphoe</label>
+        <input name="amphoe" ng-model="address.amphoe" required>
+      </md-input-container>
+
+    </md-amphoe>
+  </div>
+
+  <div class="col-md-6">
+    <md-province>
+
+      <md-input-container class="md-block" flex-gt-xs>
+        <label>Province</label>
+        <input name="province" ng-model="address.province" required>
+      </md-input-container>
+
+    </md-province>
+  </div>
+
+  <div class="col-md-6">
+    <md-zipcode>
+
+      <md-input-container class="md-block" flex-gt-xs>
+        <label>Zipcode</label>
+        <input name="zipcode" ng-model="address.zipcode" required>
+      </md-input-container>
+
+    </md-zipcode>
+  </div>
+
+</md-address>
+
+{{address}}
