--- a/example/src/app/features/home/home.html
+++ b/example/src/app/features/home/home.html
@@ -1,7 +1,4 @@
-<p>district: {{district}}</p>
-<p>amphoe: {{amphoe}}</p>
-<p>province: {{province}}</p>
-<p>zipcode: {{zipcode}}</p>
+<h1>Address</h1>
 
 <br/>
 
