--- a/example/src/app/app.html
+++ b/example/src/app/app.html
@@ -1,6 +1,6 @@
-<main>
-  <h1 class="title">Hello from Angular !</h1>
+<main class="container">
+  <ui-view></ui-view>
 </main>
-<footer>
-  <a ng-href="{{app.url}}">Webpack Angular Starter</a>
+<footer class="container shadow text-center mt-5 p-3">
+ 2020 © <a href="https://kiwsan.com/" target="_blank">kiwsan</a>. All rights reserved
 </footer>
