--- a/example/src/app/features/home/home.html
+++ b/example/src/app/features/home/home.html
@@ -1,8 +1,13 @@
-<h1>Address</h1>
+<h1>Location</h1>
+<p>Where is you property located?</p>
 
-<br/>
+<div>
+  <md-input-container class="md-block" flex-gt-xs>
+    <input name="search" ng-model="search">
+  </md-input-container>
+</div>
 
-<md-address class="row">
+<md-address class="row shadow pt-4 pb-4">
 
   <div class="col-md-12">
     <md-input-container class="md-block" flex-gt-xs>
@@ -55,13 +60,33 @@
     <md-zipcode>
 
       <md-input-container class="md-block" flex-gt-xs>
-        <label>Zipcode</label>
+        <label>Zip code</label>
         <input name="zipcode" ng-model="address.zipcode" required>
       </md-input-container>
 
     </md-zipcode>
   </div>
 
+  <div class="col-md-12">
+    <div class="mapouter">
+      <div class="gmap_canvas">
+        <iframe width="100%" height="290" id="gmap_canvas" src="https://maps.google.com/maps?q=thailand&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+        <a href="https://www.embedgooglemap.net">embedgooglemap.net</a>
+      </div>
+      <style>
+        .mapouter {
+          position: relative;
+          text-align: right;
+          height: 290px;
+          width: 100%;
+        }
+        .gmap_canvas {
+          overflow: hidden;
+          background: none!important;
+          height: 290px;
+          width: 100%;
+        }
+      </style>
+    </div>
+  </div>
 </md-address>
-
-{{address}}
