--- a/example/src/index.scss
+++ b/example/src/index.scss
@@ -4,6 +4,7 @@
 
 @import '~bootstrap/dist/css/bootstrap.css';
 @import '~angular-material/angular-material.scss';
+@import '~jthailand/jquery.Thailand.js/dist/jquery.Thailand.min.css';
 
 /**
  * Global styles go here
